Realizando parte de la seccion de ordenes.

--- a/gestion-app-frontend/src/index.css
+++ b/gestion-app-frontend/src/index.css
@@ -25,3 +25,10 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.modal-content,
+.modal-dialog,
+.modal-body {
+  border-radius: 20px !important;
+  border: none;
+}
